Se agregan modelos y crud para branch-office, car-category, car, user, con auth y login

--- a/Service/.env.development
+++ b/Service/.env.development
@@ -1,1 +1,5 @@
 PORT = 4000
+URL_MONGO  = mongodb+srv://admin:Z4dSrCZfFnDXXXDY@cluster0.3ojut.mongodb.net/CarRent?authSource=admin&replicaSet=atlas-b1ihi7-shard-0&readPreference=primary&appname=MongoDB%20Compass&ssl=true
+SEED = 78964
+TOKEN_EXPIRATION = 1m
+SALT =10
